--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cards",
+  "name": "DAOCards",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "ethers": "^5.6.9",
+    "framer-motion": "^6",
+    "graphql": "^16.5.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
